@@ -1,3 +1,8 @@
+2010-06-26  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/nacopula.R (onacopula): allow 'family' be a family object as
+	well (not only a family *name*)  ===> can use it with opower()-cops!
+
 2010-06-17  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* man/tauAMH.Rd, NAMESPACE: add help file and export
